fixed vertical navigation display box being full width. Fixed timeline bleeding into interactive story map with z-index corrections. Changed color of links to darkgreen.

--- a/css/layout/_verticalnavigation.scss
+++ b/css/layout/_verticalnavigation.scss
@@ -10,6 +10,7 @@ $darkgreen: #004000;
   position: sticky;
   top: 0;
   z-index: 1000;
+  display: inline-block;
   .active {
     width: 200px;
     @media (min-width: $medium) {
