--- a/css/pages/_2021intropage.scss
+++ b/css/pages/_2021intropage.scss
@@ -164,6 +164,60 @@ html {
   .nav-flex {
     border: 2px solid $text-primary;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    a {
+      position: relative;
+      transition: color 0.4s ease-out;
+      color: $darkgreen;
+      margin-bottom: 2rem;
+      cursor: pointer;
+      font-size: 18px;
+      &:last-child {
+        margin-bottom: 1rem;
+      }
+    }
+    a:hover {
+      color: lighten($darkgreen, 30%);
+      right: 0;
+      text-decoration: none;
+    }
+    a:hover:after {
+      border-color: lighten($darkgreen, 30%);
+      right: 0;
+    }
+    a:after {
+      border-radius: 1em;
+      border-top: 0.1em solid lighten($darkgreen, 30%);
+      content: "";
+      position: absolute;
+      right: 100%;
+      bottom: -0.5rem;
+      left: 0;
+      transition: right 0.4s cubic-bezier(0, 0.5, 0, 1),
+        border-color 0.4s ease-out;
+    }
+    a:hover:after {
+      animation: anchor-underline 2s cubic-bezier(0, 0.5, 0, 1) infinite;
+      border-color: lighten($darkgreen, 30%);
+    }
+    @keyframes anchor-underline {
+      0%,
+      10% {
+        left: 0;
+        right: 100%;
+      }
+      40%,
+      60% {
+        left: 0;
+        right: 0;
+      }
+      90%,
+      100% {
+        left: 100%;
+        right: 0;
+      }
+    }
     h5 {
       padding-bottom: 2rem;
     }
@@ -266,7 +320,7 @@ html {
   left: 0;
   bottom: 0;
   right: 0;
-  height: 50px;
+  height: 120px;
   &:before {
     background-color: rgba(52, 73, 94, 0.75);
   }
@@ -447,11 +501,13 @@ svg#video-play-button {
   max-height: 0;
   font-size: 0;
   transition: 0.25s ease;
+  z-index: -1;
 }
 .read-more-state:checked ~ .read-more-wrap .read-more-target {
   opacity: 1;
   font-size: inherit;
   max-height: 999em;
+  z-index: 1;
 }
 .read-more-state ~ .read-more-trigger:before {
   content: "Show more";
@@ -519,7 +575,12 @@ svg#video-play-button {
     font-style: italic;
   }
 }
-//SECTION5
+//STORYMAPSJS MAP
+#section5 {
+  z-index: 1000;
+}
+
+//HISTORY OF EACH PARK
 .historyeachpark {
   padding: 4rem 2rem;
 }
